--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "homepage": "https://zule10.github.io/hotels",
   "scripts": {
     "start": "parcel index.html",
+    "predeploy": "parcel run build",
+    "deploy": "gh-pages -d build",
     "build": "parcel build index.html --public-url ./"
   },
   "atomic_save": "false",
@@ -12,6 +15,7 @@
   "author": "Zuleimi Esteffanny González Muñoz",
   "license": "ISC",
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
